objects/Opportunity.object
<CustomObject><businessProcesses>
        <fullName>Student Journey</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Applied</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Refused</fullName>
        </values>
    </businessProcesses><fields>
        <fullName>Application_discussed_with_LSTM_details__c</fullName>
        <label>Application discussed with LSTM details</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Application_discussed_with_LSTM_staff__c</fullName>
        <inlineHelpText>Have you already been in discussion with a member of LSTM's academic staff about your application? (If yes, please specify)</inlineHelpText>
        <label>Application discussed with LSTM staff?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Computer_Skills__c</fullName>
        <label>Computer Skills</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Country_of_Issue__c</fullName>
        <label>Country of Issue</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Disability_HESA_Code__c</fullName>
        <label>Disability HESA Code</label>
        <picklist>
            <controllingField>Disability__c</controllingField>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>53</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>57</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>58</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>96</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>97</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>98</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Disability__c</fullName>
        <label>Disability</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No known disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blind/partially sighted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deaf/hearing impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheelchair user/mobility difficulties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal care support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental health difficulties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>An unseen disability, e.g. diabetes, epilepsy, asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two or more impairments and/or disabling medical conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autistic Spectrum Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A specific learning difficulty e.g. dyslexia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A specific learning difficulty such as dyslexia, dyspraxia or AD(H)D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A social/communication impairment such as Asperger's syndrome/other autistic spectrum disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A long standing illness or health condition such as cancer, HIV, diabetes, chronic heart disease, or epilepsy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A mental health condition, such as depression, schizophrenia or anxiety disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A physical impairment or mobility issues, such as difficulty using arms or using a wheelchair or crutches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deaf or a serious hearing impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blind or a serious visual impairment uncorrected by glasses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A disability, impairment or medical condition that is not listed above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information refused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information not sought</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Do_you_have_a_Disability__c</fullName>
        <inlineHelpText>If you have any medical condition, physical or other disability of which the School should be aware, or which might call for special arrangements of facilities, you should attach a confidential letter.</inlineHelpText>
        <label>Do you have a Disability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Do_you_have_any_Criminal_Convictions__c</fullName>
        <inlineHelpText>If you do not answer this question, we cannot process your application. If you have answered yes, please give details of the conviction in terms of sentence served or caution received.</inlineHelpText>
        <label>Do you have any Criminal Convictions?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Ethnic_Origin__c</fullName>
        <label>Ethnic Origin</label>
        <picklist>
            <picklistValues>
                <fullName>White British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Irish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White and Black Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White and Black African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Mixed Background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian or Asian British Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian or Asian British Pakistani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian or Asian British Bangladeshi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Asian or Asian British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or Black British Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or Black British African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Black or Black British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Stated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Fees_and_Funding__c</fullName>
        <inlineHelpText>Self Financing includes payment by a family member on your behalf. If you are being sponsored for the course, please send a letter of agreement from your sponsor as soon as possible.</inlineHelpText>
        <label>Fees and Funding</label>
        <picklist>
            <picklistValues>
                <fullName>Self-financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsored</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Future_Plans__c</fullName>
        <label>Future Plans</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Gaps_in_Residence__c</fullName>
        <inlineHelpText>Have you continued to live in your country of birth up to the present day, with no gaps in residence?</inlineHelpText>
        <label>Gaps in Residence?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Health__c</fullName>
        <inlineHelpText>Do you have any health issues, disabilities or support needs?</inlineHelpText>
        <label>Health</label>
        <length>150</length>
        <type>Text</type>
    </fields><fields>
        <fullName>How_did_you_hear_about_Course_Specify__c</fullName>
        <label>How did you hear about Course - Specify</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>How_did_you_hear_about_this_Course__c</fullName>
        <label>How did you hear about this Course?</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement in (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Exhibition/Careers Fair (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSTM Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Website (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSTM Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Journal (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>If_Sponsored_applied_for_sponsorship__c</fullName>
        <description>If Sponsored, have you applied for a scholarship/sponsorship?</description>
        <label>If Sponsored, applied for sponsorship?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>If_Sponsored_indicate_the_following__c</fullName>
        <inlineHelpText>a) I am currently searching for sponsorship opportunities
b) I am waiting for a decision on a sponsorship application which is due by (please specify)
c) My sponsorship application has been approved</inlineHelpText>
        <label>If Sponsored, indicate the following</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Name_Address_of_Funding_Body__c</fullName>
        <inlineHelpText>If applied for a scholarship/sponsorship, please state the name and address of the funding body</inlineHelpText>
        <label>Name &amp; Address of Funding Body</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Name_of_Sponsor_Financial_Guarantor__c</fullName>
        <inlineHelpText>Payment Guarantee to be completed and stamped by the sponsor organisation. Alternatively, enclose written confirmation from sponsor (invoice required).</inlineHelpText>
        <label>Name of Sponsor/Financial Guarantor</label>
        <length>150</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Non_EEA_student_Visa_Details__c</fullName>
        <inlineHelpText>If you are a non-EEA student, you must supply details of any current UK visa.</inlineHelpText>
        <label>Non-EEA student - Visa Details</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Other_Relevant_Skills_and_Experience__c</fullName>
        <label>Other Relevant Skills and Experience</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Passport_Number__c</fullName>
        <label>Passport Number</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Payment_method_if_Self_financing__c</fullName>
        <label>Payment method if Self-financing</label>
        <picklist>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Personal_Statement__c</fullName>
        <label>Personal Statement</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Please_indicate_where_programme__c</fullName>
        <label>Please indicate where programme</label>
        <picklist>
            <picklistValues>
                <fullName>"University Prospectus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Exhibition/Careers Fair (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WWW (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Journal (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSTM Alumni Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous LSTM Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friends/Relatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Programme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which Programme (instance) is associated with this record</inlineHelpText>
        <label>Programme</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Programme must be active (ie most recent)</errorMessage>
            <filterItems>
                <field>Programme__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Programme__c</referenceTo>
        <relationshipLabel>Students on Programme</relationshipLabel>
        <relationshipName>Students_on_Programme</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Programme_of_Study__c</fullName>
        <description>Relates to previous programme and is used under UKBA section of Application</description>
        <label>Programme of Study</label>
        <length>150</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Proposed_Area_of_Research__c</fullName>
        <label>Proposed Area of Research</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Received_a_scholarship_sponsorship_offer__c</fullName>
        <inlineHelpText>If yes, please enclose a copy of your offer letter.
If no, please state the date by which you expect to have received an offer.
Please ensure that you notify the Programme Administrator and forward a copy of offer letter as soon as it becomes available</inlineHelpText>
        <label>Received a scholarship/sponsorship offer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Resident_Country_Past_3_Years__c</fullName>
        <inlineHelpText>What country have you been living in for the past 3 years?</inlineHelpText>
        <label>Resident Country Past 3 Years</label>
        <picklist>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Arab Emirates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saint Barthélemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean Netherlands</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Sponsor_Address_for_Invoice__c</fullName>
        <label>Sponsor Address for Invoice</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Sponsor_Email_Address__c</fullName>
        <label>Sponsor Email Address</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Sponsor_Official_Position__c</fullName>
        <inlineHelpText>Payment Guarantee to be completed and stamped by the sponsor organisation. Alternatively, enclose written confirmation from sponsor (invoice required).</inlineHelpText>
        <label>Sponsor Official Position</label>
        <length>150</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Programme of Study</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Student Applicant, Full Student, Student Pre-Reg</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Programmes (Opps)</relationshipLabel>
        <relationshipName>Student_Programmes</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Type_of_Visa__c</fullName>
        <label>Type of Visa</label>
        <length>150</length>
        <type>Text</type>
    </fields><fields>
        <fullName>UK_Visa_Required__c</fullName>
        <inlineHelpText>Do you need to apply for a visa to come to the UK?</inlineHelpText>
        <label>UK Visa Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Where_did_you_first_hear_about_programme__c</fullName>
        <inlineHelpText>Please indicate where you first heard about the programme</inlineHelpText>
        <label>Where did you first hear about programme</label>
        <picklist>
            <picklistValues>
                <fullName>University Prospectus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Exhibition/Careers Fair (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WWW (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Journal (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSTM Alumni Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous LSTM Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friends/Relatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><externalSharingModel>Private</externalSharingModel><recordTypeTrackHistory>true</recordTypeTrackHistory><sharingModel>Read</sharingModel><listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews><listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews><listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews><listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews><listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews><listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews><recordTypes>
        <fullName>Accepted</fullName>
        <active>true</active>
        <businessProcess>Student Journey</businessProcess>
        <label>Accepted</label>
    </recordTypes><recordTypes>
        <fullName>Applied</fullName>
        <active>true</active>
        <businessProcess>Student Journey</businessProcess>
        <label>Applied</label>
    </recordTypes><recordTypes>
        <fullName>Refused</fullName>
        <active>true</active>
        <businessProcess>Student Journey</businessProcess>
        <label>Refused</label>
    </recordTypes></CustomObject>